# logs-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: crud.py  database.py  logging_config.py  main.py  models.py  schemas.py
backend/app/analytics/: router.py  schemas.py  service.py
backend/app/api/: v1.py
backend/app/core/: config.py  database.py  logging.py
backend/app/logs/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/routers/: analytics.py  logs.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_analytics.py  test_logs.py
frontend/: Dockerfile  README.md  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx  vitest.setup.ts
frontend/e2e/: dashboard.spec.ts  log-crud.spec.ts  logs.spec.ts  navigation.spec.ts  summary.spec.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/components/: FilterPanel.tsx  LogForm.tsx  NavBar.tsx  Providers.tsx  SeverityChip.tsx  SeverityHistogram.tsx  SummaryCards.tsx  TrendChart.tsx
frontend/src/components/form/: index.ts
frontend/src/components/info/: index.ts
frontend/src/styles/: globals.css  tokens.css
frontend/src/tests/: FilterPanel.test.tsx  LogForm.test.tsx  SeverityChip.test.tsx  SummaryCards.test.tsx
(+64 files in other folders)
